--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.scss">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 </head>
 <body>
     <header class="hero">
@@ -15,10 +16,74 @@
             <img class="hero__logo" src="images/ebac_logo.svg" alt="EBAC">
             <p class="hero__text">
                 O maior evento de Tecnologia do Brasil começa em 10d 12h 20m 15s
+
+                <div class="infos-bar">
+                    <ul class="infos-bar__infos">
+                        <li class="infos-bar__infos__item">
+                            <strong>Localização</strong>
+                            Allianz Parque - Barra Funda - São Paulo
+                        </li>
+                        <li class="infos-bar__infos__item">
+                            <strong>Preço</strong>
+                            A partir de R$ 120,00
+                        </li>
+                        <li class="infos-bar__infos__item">
+                            <strong>Quando</strong>
+                            00/00/0000 às 19h
+                        </li>
+                    </ul>
+                    <a href="#" class="button button--primary">Garanta a sua vaga</a>
+                </div>
             </p>
         </div>
     </header>
 
+    <section class="events events--frontend">
+        <div class="container" data-aos="fade-right">
+            <div class="events__details">
+                <h2 class="events__details__title">Front-end</h2>
+                <p class="events__details__description">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut nobis praesentium accusantium nostrum itaque, nulla nihil perspiciatis! Alias, ducimus pariatur aliquam commodi voluptate corporis? Ipsam soluta id nulla odit tempore.
+                </p>
+            </div>
+            <img class="events__image" src="images/frontend.png" alt="Front-end">
+        </div>
+    </section>
+    <section class="events events--ux-ui events--image-left">
+        <div class="container" data-aos="fade-left">
+            <div class="events__details">
+                <h2 class="events__details__title">UI/UX</h2>
+                <p class="events__details__description">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut nobis praesentium accusantium nostrum itaque, nulla nihil perspiciatis! Alias, ducimus pariatur aliquam commodi voluptate corporis? Ipsam soluta id nulla odit tempore.
+                </p>
+            </div>
+            <img class="events__image" src="images/frontend.png" alt="UI/UX">
+        </div>
+    </section>
+    <section class="events events--data-science">
+        <div class="container" data-aos="fade-right">
+            <div class="events__details">
+                <h2 class="events__details__title">Data Science</h2>
+                <p class="events__details__description">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut nobis praesentium accusantium nostrum itaque, nulla nihil perspiciatis! Alias, ducimus pariatur aliquam commodi voluptate corporis? Ipsam soluta id nulla odit tempore.
+                </p>
+            </div>
+            <img class="events__image" src="images/frontend.png" alt="Data Science">
+        </div>
+    </section>
+    <section class="events events--backend events--image-left">
+        <div class="container" data-aos="fade-left">
+            <div class="events__details">
+                <h2 class="events__details__title">Back-end</h2>
+                <p class="events__details__description">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut nobis praesentium accusantium nostrum itaque, nulla nihil perspiciatis! Alias, ducimus pariatur aliquam commodi voluptate corporis? Ipsam soluta id nulla odit tempore.
+                </p>
+            </div>
+            <img class="events__image" src="images/frontend.png" alt="Back-end">
+        </div>
+    </section>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
