feat: criando a contagem regressiva

--- a/src/index.html
+++ b/src/index.html
@@ -15,26 +15,25 @@
         <div class="container">
             <img class="hero__logo" src="images/ebac_logo.svg" alt="EBAC">
             <p class="hero__text">
-                O maior evento de Tecnologia do Brasil começa em 10d 12h 20m 15s
-
-                <div class="infos-bar">
-                    <ul class="infos-bar__infos">
-                        <li class="infos-bar__infos__item">
-                            <strong>Localização</strong>
-                            Allianz Parque - Barra Funda - São Paulo
-                        </li>
-                        <li class="infos-bar__infos__item">
-                            <strong>Preço</strong>
-                            A partir de R$ 120,00
-                        </li>
-                        <li class="infos-bar__infos__item">
-                            <strong>Quando</strong>
-                            00/00/0000 às 19h
-                        </li>
-                    </ul>
-                    <a href="#" class="button button--primary">Garanta a sua vaga</a>
-                </div>
+                O maior evento de Tecnologia do Brasil começa em <span id="contador"></span>
             </p>
+            <div class="infos-bar">
+                <ul class="infos-bar__infos">
+                    <li class="infos-bar__infos__item">
+                        <strong>Localização</strong>
+                        Allianz Parque - Barra Funda - São Paulo
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <strong>Preço</strong>
+                        A partir de R$ 120,00
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <strong>Quando</strong>
+                        12/12/2024 às 19h
+                    </li>
+                </ul>
+                <a href="#" class="button button--primary">Garanta a sua vaga</a>
+            </div>
         </div>
     </header>
 
