--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut nobis praesentium accusantium nostrum itaque, nulla nihil perspiciatis! Alias, ducimus pariatur aliquam commodi voluptate corporis? Ipsam soluta id nulla odit tempore.
                 </p>
             </div>
-            <img class="events__image" src="images/frontend.png" alt="UI/UX">
+            <img class="events__image" src="images/ui-ux.png" alt="UI/UX">
         </div>
     </section>
     <section class="events events--data-science">
@@ -67,7 +67,7 @@
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut nobis praesentium accusantium nostrum itaque, nulla nihil perspiciatis! Alias, ducimus pariatur aliquam commodi voluptate corporis? Ipsam soluta id nulla odit tempore.
                 </p>
             </div>
-            <img class="events__image" src="images/frontend.png" alt="Data Science">
+            <img class="events__image" src="images/data.png" alt="Data Science">
         </div>
     </section>
     <section class="events events--backend events--image-left">
@@ -78,7 +78,7 @@
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut nobis praesentium accusantium nostrum itaque, nulla nihil perspiciatis! Alias, ducimus pariatur aliquam commodi voluptate corporis? Ipsam soluta id nulla odit tempore.
                 </p>
             </div>
-            <img class="events__image" src="images/frontend.png" alt="Back-end">
+            <img class="events__image" src="images/backend.png" alt="Back-end">
         </div>
     </section>
 
